SERVER-24313 Acquire lock when RS backing KVCatalog isn't thread-safe.